center aligning and bug fix for scrolling on click

--- a/css/style.css
+++ b/css/style.css
@@ -5818,7 +5818,7 @@ li.h4header {
 }
 
 .blogpost-entry {
-height: 360px;
+    height: 480px;
     text-overflow: ellipsis;
     overflow: hidden;
 }
@@ -5829,10 +5829,51 @@ height: 360px;
 }
 .blog-ellipsis{
     width: -webkit-fill-available;
-    margin-top: -19px;
+    margin-top: -22px;
     background: white;
     z-index: 5;
     text-align: end;
     opacity: 0.8;
-    height: 24px;
+    height: 30px;
+}
+@media (max-width:2000px) {
+    .blogs-carousel .owl-stage{
+        padding-left:15vw;
+    }
+}
+@media (max-width:1680px) {
+    .blogs-carousel .owl-stage{
+        padding-left:16vw;
+    }
+}
+@media (max-width:1600px) {
+    .blogs-carousel .owl-stage{
+        padding-left:17vw;
+    }
+}
+@media (max-width:1550px) {
+    .blogs-carousel .owl-stage{
+        padding-left:18vw;
+    }
+}
+@media (max-width:1450px) {
+    .blogs-carousel .owl-stage{
+        padding-left:19vw;
+    }
+}
+@media (max-width:1370px) {
+    .blogs-carousel .owl-stage{
+        padding-left:20vw;
+    }
+}
+@media (max-width:1280px) {
+    .blogs-carousel .owl-stage{
+        padding-left:22vw;
+    }
+}
+
+@media (max-width:1000px) {
+    .blogs-carousel .owl-stage{
+        padding-left:0;
+    }
 }
